# ff2mpv-rust

./: Cargo.toml  README.md  ff2mpv-rust.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: browser.rs  command.rs  config.rs  error.rs  lib.rs  main.rs
