[package]
name = "ff2mpv-rust"
version = "1.1.4"
edition = "2021"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = ["preserve_order"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_System_Threading"] }

[profile.dev-optimized]
inherits = "dev"
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1
