[package]
name = "ff2mpv-rust"
version = "1.1.7"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Threading"] }

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
